fix: modifications suite à relecture de Noémie

--- a/formation-git_digest.qmd
+++ b/formation-git_digest.qmd
@@ -52,16 +52,16 @@ Exemple de ce que l'on peut trouver sur un server :
 
 **Le versioning permet de :**  
 
+- Obtenir de **la traçabilité** : on sait qui a changé quoi, quand, comment et pourquoi => cf. [exemple sur l'IPPAP](https://forge.agriculture.rie.gouv.fr/gitlab/ssp/bmis/ippap/-/issues/75){target="_blank"}  
 - **Travailler collectivement** sur les mêmes fichiers **en même temps** => cf. [ici](https://ddotta.github.io/formation-git/#/git---un-mod%C3%A8le-distribu%C3%A9){target="_blank"}    
-- Obtenir de **la traçabilité** : on sait qui a changé quoi, quand, comment et pourquoi => cf. [exemple sur l'IPPAP](https://forge.agriculture.rie.gouv.fr/gitlab/ssp/bmis/ippap){target="_blank"}  
 - **L'expérimentation** lors des développements sans risques (à l'aide des branches) => cf. [ici](https://ddotta.github.io/formation-git/#/d%C3%A9finition-des-branches){target="_blank"}  
 - Faire de la **relecture** (revues de codes...) cf. [ici](https://ddotta.github.io/formation-git/#/les-relectures-ou-revues-de-code-avec-gitlab-12){target="_blank"}  
-- **Voyager dans le temps** cf. [ici](https://ddotta.github.io/formation-git/#/revenir-en-arri%C3%A8re-avec-gitlab-13){target="_blank"}  
+- **Revenir en arrière** cf. [ici](https://ddotta.github.io/formation-git/#/revenir-en-arri%C3%A8re-avec-gitlab-13){target="_blank"}  
 
 [**Avec une forge comme gitlab, il permet en plus de :**]{.red}  
 
 - [D'archiver le code]{.red}  
-- [D'apporter de la visibilité à vos projets]{.red}  
+- [Partager le code au sein d'une communauté]{.red}  
 
 ## Qu'est-ce qu'on versionne ?
 
@@ -84,7 +84,7 @@ Par exemple :
 - Configuration de Git sous Cerise et de sa liaison avec la [forge interne Gitlab](https://forge.agriculture.rie.gouv.fr/gitlab/)
 - Utilisation de Git au quotidien avec l'essentiel des commandes
 - Présentation des fonctionnalités majeures de Gitlab (groupes, système de ticketing, tableau kanban...)
-- Comment revenir en arrière dans son projet ?
+- Comment restaurer un état précédent de son projet ?
 - Comment travailler à plusieurs sur un même projet (notions de branches, workflow, conflits...)
 
 [Quelques exercices pratiques accompagnent la formation pour que les participants puissent mettre en pratique les notions abordées.]{.souligneRouge}
@@ -136,4 +136,4 @@ Des formations prévues en 2024 :
 - Fin septembre : à Paris
 - Mi octobre : à Lyon
 
-En tant que nouvelle formation au catalogue du MASA, le nombre de places n'est pas limité et un effort pourra être fait sur le nombre de formations dispensées pour répondre au besoin si nécessaire.
+En tant que nouvelle formation au catalogue du SSP, le nombre de places est limité par session. Cependant le nombre de formations pourra être augmenté pour répondre au besoin si nécessaire.
