--- a/formation-git_digest.qmd
+++ b/formation-git_digest.qmd
@@ -3,7 +3,7 @@ title: "Git et Gitlab"
 subtitle: "Sensibilisation de l'encadrement du SSP par Damien Dotta"
 date: "07/05/2024"
 date-format: "DD/MM/YYYY"
-author: "DEMESIS/PAOS"
+author: "SSP/DEMESIS/PAOS"
 description: |
   Support de formation au format digest de Git pour les utilisateurs de R au MASA
 
